--- a/napoleonsTheorem.html
+++ b/napoleonsTheorem.html
@@ -1,16 +1,38 @@
 <!DOCTYPE html>
 <!--
-To change this license header, choose License Headers in Project Properties.
-To change this template file, choose Tools | Templates
-and open the template in the editor.
+Hannah Sexton
+Natalie Leatherman
 -->
 <html>
     <head>
         <title>Napoleon's Theorem</title>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <script id="vertex-shader" type="x-shader/x-vertex">
+       attribute vec4 vPosition;
+       void main()
+       {
+           gl_Position = vPosition;
+       }
+        </script>
+        <script id="fragment-shader" type="x-shader/x-fragment">
+            precision mediump float;
+            uniform vec4 uColor;
+            void main() {
+                gl_FragColor = uColor;
+            }
+        </script>
+          <script type="text/javascript" src="http://arden.cs.unca.edu/~cameron/Angel/SourceCode/Common/webgl-utils.js"></script>
+        <script type="text/javascript" src="http://arden.cs.unca.edu/~cameron/Angel/SourceCode/Common/initShaders.js"></script>
+        <script type="text/javascript" src="http://arden.cs.unca.edu/~cameron/Angel/SourceCode/Common/MV.js"></script>
+        <script type="text/javascript" src="napoleonsTheorem.js"></script>
+    
     </head>
-    <body>
-        <div>TODO write</div>
+    <body onload="canvasMain()">
+        <div>
+            <canvas id="gl-canvas" width="512" height="512">
+                oops... your browser doesn't support the HTML canvas element
+            </canvas>
+        </div>
     </body>
 </html>
