--- a/napoleonsTheorem.html
+++ b/napoleonsTheorem.html
@@ -2,6 +2,7 @@
 <!--
 Hannah Sexton
 Natalie Leatherman
+Napoleon's Theorem...
 -->
 <html>
     <head>
@@ -31,7 +32,7 @@ Natalie Leatherman
     <body onload="canvasMain()">
         <div>
             <canvas id="gl-canvas" width="512" height="512">
-                oops... your browser doesn't support the HTML canvas element
+                oops... your browser doesn't support the HTML canvas element hddfsafkj
             </canvas>
         </div>
     </body>
