--- a/napoleonsTheorem.html
+++ b/napoleonsTheorem.html
@@ -31,7 +31,7 @@ Napoleon's Theorem
     </head>
     <body onload="canvasMain()">
         <div>
-            <canvas id="gl-canvas" width="512" height="512">
+            <canvas id="gl-canvas" width="512" height="512" onmouseup="mouseUp()">
                 oops... your browser doesn't support the HTML canvas element hddfsafkj
             </canvas>
         </div>
