working on drawingPoint

--- a/napoleonsTheorem.html
+++ b/napoleonsTheorem.html
@@ -31,8 +31,8 @@ Napoleon's Theorem
     </head>
     <body onload="canvasMain()">
         <div>
-            <canvas id="gl-canvas" width="512" height="512" onmouseup="mouseUp()">
-                oops... your browser doesn't support the HTML canvas element hddfsafkj
+            <canvas id="gl-canvas" width="512" height="512" onmouseup="drawPoint(event)">
+                oops... your browser doesn't support the HTML canvas element
             </canvas>
         </div>
     </body>
