added buttons and title to display

--- a/napoleonsTheorem.html
+++ b/napoleonsTheorem.html
@@ -31,9 +31,16 @@ Napoleon's Theorem
     </head>
     <body onload="canvasMain()">
         <div>
+            <h1>Napoleon's Theorem</h1>
             <canvas id="gl-canvas" width="512" height="512" onmouseup="drawPoint(event)">
                 oops... your browser doesn't support the HTML canvas element
             </canvas>
+        </div>
+        <div>
+            <button id= "previousStep"><<</button>
+            <button id= "previousInstruction">Back</button>
+            <button id= "nextInstruction">Next</button>
+            <button id= "nextStep">>></button>
         </div>
     </body>
 </html>
