--- a/napoleonsTheorem.html
+++ b/napoleonsTheorem.html
@@ -32,7 +32,7 @@ Napoleon's Theorem
     <body onload="canvasMain()">
         <div>
             <h1>Napoleon's Theorem</h1>
-            <canvas id="gl-canvas" width="512" height="512" onmouseup="drawPoint(event)">
+            <canvas id="gl-canvas" width="512" height="512">
                 oops... your browser doesn't support the HTML canvas element
             </canvas>
         </div>
