got the text properly aligned

--- a/napoleonsTheorem.html
+++ b/napoleonsTheorem.html
@@ -37,9 +37,9 @@ Napoleon's Theorem
             </canvas>           
         </div>          
         <div>
-            <p style="float:left">
-                This is a test<br>
-                to see if this method works.
+            <p style="margin-left:550px">
+                    This is a test to see <br>
+                    if this method works.
             </p>
         </div>
         <div>
