--- a/napoleonsTheorem.html
+++ b/napoleonsTheorem.html
@@ -54,7 +54,10 @@ April 27, 2016
                 <u>Proposition 14:</u> “the centre of gravity of any triangle<br> 
                 is at the intersection of the lines drawn from any two<br>
                 angles to the middle points of the opposite sides respectively.”
-
+            </p>
+            <p style="margin-left:550px;font-size:25px">
+                <u>Instructions:</u> Click and drag the vertices of the triangle to change<br>
+                the dimensions of the triangle.
             </p>
         </div>   
     </body>
