--- a/napoleonsTheorem.html
+++ b/napoleonsTheorem.html
@@ -33,7 +33,7 @@ April 27, 2016
     </head>
     <body onload="canvasMain()">        
         <div>
-            <h1 align="center"><u>Centroid</u></h1>             
+            <h1 align="center"><u>The Median Concurrence Theorem (Centroids)</u></h1>             
             <canvas id="gl-canvas" width="512" height="512" style="border:1px solid #000000;float:left">
                 oops... your browser doesn't support the HTML canvas element
             </canvas>           
