--- a/napoleonsTheorem.html
+++ b/napoleonsTheorem.html
@@ -59,6 +59,10 @@ April 27, 2016
                 <u>Instructions:</u> Click and drag the vertices of the triangle to change<br>
                 the dimensions of the triangle.
             </p>
+            <p style="margin-left:550px;font-size:16px">
+                Created by Hannah Sexton and Natalie Leatherman
+                for CSCI 346: Computer Graphics
+            </p>
         </div>   
     </body>
 </html>
